--- a/.gitignore
+++ b/.gitignore
@@ -2,35 +2,21 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
-
-# testing
-/coverage
+# /.pnp
+# .pnp.js
 
 # next.js
 /.next/
 /out/
 
-# production
-/build
+# # production
+# /build
 
-# misc
-.DS_Store
-*.pem
+# # misc
+# .DS_Store
+# *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# # debug
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
