--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-google-button": "^0.7.2"
   },
   "devDependencies": {
     "@types/node": "^20",
