--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
+    "emoji-mart": "^5.5.2",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
